--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,23 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json"
+  "extends": "@react-native/typescript-config/tsconfig.json",
+  "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@components": ["src/components"],
+      "@hooks": ["src/hooks"],
+      "@routes": ["src/routes"],
+      "@screens": ["src/screens"],
+      "@theme": ["src/theme"],
+      "@domain": ["src/domain"],
+      "@brand": ["src/brand"],
+      "@api": ["src/api"],
+      "@types": ["src/types"],
+      "@utils": ["src/utils"],
+      "@infra": ["src/infra"],
+      "@services": ["src/services"],
+      "@test": ["src/test"],
+      "@assets": ["src/assets"],
+      "test-utils": ["src/test/test-utils"]
+    }
+  }
 }
