--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@shopify/restyle": "^2.4.4",
     "react": "18.2.0",
     "react-native": "0.73.8",
+    "react-native-safe-area-context": "^4.10.8",
     "react-native-svg": "^15.5.0"
   },
   "devDependencies": {
