--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "@shopify/restyle": "^2.4.4",
     "react": "18.2.0",
     "react-native": "0.73.8",
     "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.5.0"
   },
   "devDependencies": {
