--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@shopify/restyle": "^2.4.4",
     "react": "18.2.0",
+    "react-hook-form": "7.43.9",
     "react-native": "0.73.8",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.34.0",
-    "react-native-svg": "^15.5.0"
+    "react-native-svg": "^15.5.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
