--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@shopify/restyle": "^2.4.4",
+    "axios": "^1.7.4",
     "react": "18.2.0",
     "react-hook-form": "7.43.9",
     "react-native": "0.73.8",
