--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "react-native start",
     "test": "jest",
     "prepare": "husky",
-    "art:3333": "adb reverse tcp:3333 tcp:3333"
+    "art:3333": "adb reverse tcp:3333 tcp:3333",
+    "ap": "adb shell input text",
+    "pre-commit": "yarn lint && yarn tsc --noEmit && yarn test"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -40,6 +42,7 @@
     "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
     "@tanstack/eslint-plugin-query": "^5.52.0",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
