jest unit and component testing in custom hooks

--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
       ".*/mockedData/.*"
     ],
     "collectCoverageFrom": [
-      "src/{components,utils,hooks,domain}/**/*.{js,jsx,ts,tsx}"
+      "src/{components,utils,hooks,domain,infra}/**/*.{js,jsx,ts,tsx}"
     ],
     "coveragePathIgnorePatterns": [
       "/node_modules/",
