--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tanstack/react-query": "4.32.6",
     "axios": "^1.7.4",
     "date-fns": "^3.6.0",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-hook-form": "7.43.9",
     "react-native": "0.73.8",
@@ -46,8 +47,9 @@
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^12.3.0",
     "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.7",
     "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
+    "@types/react-test-renderer": "^18.0.7",
     "babel-jest": "^29.6.3",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
@@ -55,6 +57,7 @@
     "eslint-plugin-testing-library": "^6.3.0",
     "husky": "^9.1.4",
     "jest": "^29.6.3",
+    "msw": "2.2.2",
     "prettier": "^2.8.0",
     "react-test-renderer": "18.2.0",
     "ts-node": "^10.9.2",
@@ -62,28 +65,5 @@
   },
   "engines": {
     "node": ">=18"
-  },
-  "jest": {
-    "preset": "react-native",
-    "setupFiles": [
-      "<rootDir>/src/test/jestSetup.ts"
-    ],
-    "setupFilesAfterEnv": [
-      "@testing-library/jest-native/extend-expect"
-    ],
-    "moduleDirectories": [
-      "node_modules",
-      "./src/test"
-    ],
-    "modulePathIgnorePatterns": [
-      ".*/mockedData/.*"
-    ],
-    "collectCoverageFrom": [
-      "src/{components,utils,hooks,domain,infra}/**/*.{js,jsx,ts,tsx}"
-    ],
-    "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "index"
-    ]
   }
-  }
+}
