--- a/ios/NubbleApp/Info.plist
+++ b/ios/NubbleApp/Info.plist
@@ -60,5 +60,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>To publish new posts</string>
 </dict>
 </plist>
