--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hook-form": "7.43.9",
     "react-native": "0.73.8",
     "react-native-mmkv": "^2.10.2",
+    "react-native-permissions": "^4.1.5",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.5.0",
