--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.5.0",
+    "react-native-vision-camera": "^3.8.2",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
