--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-query": "4.32.6",
     "axios": "^1.7.4",
     "date-fns": "^3.6.0",
+    "expo": "^50.0.0",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-hook-form": "7.43.9",
