--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.7.4",
     "date-fns": "^3.6.0",
     "expo": "^50.0.0",
+    "expo-image-manipulator": "~11.8.0",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-hook-form": "7.43.9",
@@ -45,7 +46,9 @@
     "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "0.73.21",
     "@react-native/eslint-config": "0.73.2",
-    "@react-native/metro-config": "0.73.5",
+    "@react-native/js-polyfills": "^0.75.3",
+    "@react-native/metro-babel-transformer": "^0.75.3",
+    "@react-native/metro-config": "^0.75.3",
     "@react-native/typescript-config": "0.73.1",
     "@tanstack/eslint-plugin-query": "^5.52.0",
     "@testing-library/jest-native": "^5.4.3",
@@ -61,6 +64,8 @@
     "eslint-plugin-testing-library": "^6.3.0",
     "husky": "^9.1.4",
     "jest": "^29.6.3",
+    "metro-config": "^0.80.12",
+    "metro-runtime": "^0.80.12",
     "msw": "2.2.2",
     "prettier": "^2.8.0",
     "react-test-renderer": "18.2.0",
