--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "husky": "^9.1.4",
     "jest": "^29.6.3",
     "metro-config": "^0.80.12",
+    "metro-react-native-babel-preset": "^0.77.0",
     "metro-runtime": "^0.80.12",
     "msw": "2.2.2",
     "prettier": "^2.8.0",
