--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "18.2.0",
     "react-hook-form": "7.43.9",
     "react-native": "0.73.8",
+    "react-native-bootsplash": "^6.1.5",
     "react-native-mmkv": "^2.10.2",
     "react-native-permissions": "^4.1.5",
     "react-native-safe-area-context": "^4.10.8",
