--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-camera-roll/camera-roll": "^7.8.3",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
@@ -25,19 +25,19 @@
     "@tanstack/react-query": "4.32.6",
     "axios": "^1.7.4",
     "date-fns": "^3.6.0",
-    "expo": "^50.0.0",
-    "expo-image-manipulator": "~11.8.0",
+    "expo": "^51.0.0",
+    "expo-image-manipulator": "~12.0.5",
     "lodash": "^4.17.21",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "react-hook-form": "7.43.9",
-    "react-native": "0.73.8",
+    "react-native": "0.75.4",
     "react-native-bootsplash": "^5.4.1",
     "react-native-mmkv": "^2.10.2",
     "react-native-permissions": "^4.1.5",
-    "react-native-safe-area-context": "^4.10.8",
+    "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "^3.34.0",
-    "react-native-svg": "^15.5.0",
-    "react-native-vision-camera": "^3.8.2",
+    "react-native-svg": "14.1.0",
+    "react-native-vision-camera": "^4.5.3",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
@@ -45,18 +45,18 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.73.21",
-    "@react-native/eslint-config": "0.73.2",
+    "@react-native/babel-preset": "0.75.4",
+    "@react-native/eslint-config": "0.75.4",
     "@react-native/js-polyfills": "^0.75.3",
     "@react-native/metro-babel-transformer": "^0.75.3",
-    "@react-native/metro-config": "^0.75.3",
-    "@react-native/typescript-config": "0.73.1",
+    "@react-native/metro-config": "0.75.4",
+    "@react-native/typescript-config": "0.75.4",
     "@tanstack/eslint-plugin-query": "^5.52.0",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^12.3.0",
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.7",
-    "@types/react": "^18.2.6",
+    "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
     "babel-jest": "^29.6.3",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -70,11 +70,12 @@
     "metro-runtime": "^0.80.12",
     "msw": "2.2.2",
     "prettier": "^2.8.0",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "18.3.1",
     "ts-node": "^10.9.2",
-    "typescript": "5.0.4"
+    "typescript": "^5.3.0"
   },
   "engines": {
     "node": ">=18"
-  }
+  },
+  "packageManager": "yarn@3.6.4"
 }
