--- a/.github/workflows/pull-request-checks.yaml
+++ b/.github/workflows/pull-request-checks.yaml
@@ -17,6 +17,9 @@ jobs:
         with:
           node-version: '18'
 
+      - name: Install Yarn
+        run: corepack enable
+
       - name: Install Packages
         run: yarn install
 
