--- a/.gitignore
+++ b/.gitignore
@@ -71,11 +71,13 @@ dist/
 web-build/
 /ios/NubbleApp.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
 
-# Yarn
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
-.yarn/releases/*
+
+# Swap the next line with the line above it
+.yarn/install-state.gz
+# .yarn/releases/*
