--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -77,13 +77,16 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.nubbleapp"
+    namespace "com.mingossi.nubbleapp"
     defaultConfig {
-        applicationId "com.nubbleapp"
+        applicationId "com.mingossi.nubbleapp"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        ndk {
+           abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+        }
     }
     signingConfigs {
         debug {
@@ -91,6 +94,12 @@ android {
             storePassword 'android'
             keyAlias 'androiddebugkey'
             keyPassword 'android'
+        }
+        release {
+            storeFile file('upload.jks')
+            storePassword System.getenv('NUBBLE_STORE_PASSWORD')
+            keyAlias System.getenv('NUBBLE_ALIAS_PASSWORD')
+            keyPassword System.getenv('NUBBLE_KEY_PASSWORD')
         }
     }
     buildTypes {
@@ -100,7 +109,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
