--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "eslint-plugin-testing-library": "^6.3.0",
     "husky": "^9.1.4",
     "jest": "^29.6.3",
-    "metro-config": "^0.80.12",
+    "metro-config": "0.75.1",
     "metro-react-native-babel-preset": "^0.77.0",
     "metro-runtime": "^0.80.12",
     "msw": "2.2.2",
