--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -7,7 +7,11 @@ on:
   workflow_dispatch:
 
 jobs:
+  run-checks:
+    uses: ./.github/workflows/pull-request-checks.yaml
+
   build-android:
+    needs: run-checks
     runs-on: ubuntu-latest
     timeout-minutes: 30
     defaults:
@@ -38,13 +42,8 @@ jobs:
       - name: Make gradlew executable
         run: chmod +x ./gradlew
 
-#      - name: Build APK
-#        run: ./gradlew assembleRelease --stacktrace --info
-      - name: Clean and Build
-        run: |
-          rm -rf ~/.gradle/caches/
-          ./gradlew clean
-          ./gradlew assembleRelease --stacktrace --info
+      - name: Build APK
+        run: ./gradlew assembleRelease
 
         env:
           NUBBLE_STORE_PASSWORD: ${{secrets.ANDROID_STORE_PASSWORD}}
