--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
     "react-hook-form": "7.43.9",
     "react-native": "0.75.4",
     "react-native-bootsplash": "^5.4.1",
-    "react-native-mmkv": "^2.10.2",
+    "react-native-mmkv": "2.12.2",
     "react-native-permissions": "^4.1.5",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "^3.34.0",
     "react-native-svg": "14.1.0",
     "react-native-vision-camera": "^4.5.3",
     "zod": "^3.23.8",
-    "zustand": "^4.5.5"
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
